syntax = "proto3";

package customer.v1;

import "google/api/annotations.proto";

option go_package = "customer/api/customerv1;v1";


service CustomerService {
  rpc CreateCustomer (CreateCustomerRequest) returns (CreateCustomerReply);
}

message CreateCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  repeated string emails = 3;
  repeated string phones = 4;
}

message CreateCustomerReply {
  int64 customer_id = 1;
}